# arli

./: Cargo.toml  LICENSE  README.md
arli/: Cargo.toml  README.md
arli-osm/: Cargo.toml  README.md
arli-osm/src/: graph_builder.rs  graph_serde.rs  lib.rs  main.rs
arli-osm/src/osm4routing/: README.md  categorize.rs  mod.rs  models.rs  reader.rs
arli-service/: Cargo.toml  README.md
arli-service/src/: cost_functions.rs  main.rs  osrm_api.rs
arli/src/: lib.rs  overlay.rs  route.rs  search_space.rs  spatial.rs  test_utils.rs  waypoint.rs
arli/src/graph/: graph.rs  mod.rs  spatial.rs  weighted.rs
arli/src/graph_impl/: common.rs  compact_graph.rs  compact_spatial_graph.rs  dynamic_graph.rs  dynamic_spatial_graph.rs  mod.rs
frontend/: config.js  index.html  index.js
