[package]
name = "arli"
version = "0.1.0"
authors = ["Peter Popov <petro.popov@gmail.com>"]
edition = "2018"

[dependencies]
rstar = "0.8.2"
geo = { version = "0.16.0", features = ["use-serde"] }
serde = { version = "1.0", features = ["derive"] }
s2 = { version = "0.0.10", features = ["serde"] }
superslice = "1"